--- a/ubuntu-dev/Dockerfile
+++ b/ubuntu-dev/Dockerfile
@@ -2,6 +2,6 @@ FROM ubuntu:20.04
 
 RUN apt-get update
 
-RUN apt-get -y sudo wget
+RUN apt-get install -y sudo wget
 
 RUN wget -qO - https://raw.githubusercontent.com/ssc1729/scripts/main/ubuntu-server-setup.sh | sudo bash
